--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<title>Hank Quinlan, Horrible Cop</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		
+		<style>
+			body {
+				 background: #ffffff url("melina(2).jpg") no-repeat right top;
+				 margin-right: 200px;
+			      }
+		</style>
 	</head>
 	<body>
 		<nav>
